--- a/ECommerceApplication/appsettings.json
+++ b/ECommerceApplication/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProductPartnerIntegration": {
+    "clientBaseUrl": "https://fakestoreapi.com",
+    "cacheTime":"20"
+  }
 }
